# DepFramework

./: DepFramework.cabal  GenFramework.cabal  Test.hs
Data/: DepFramework.hs
