name:                dep-framework
version:             0.1.0.0
synopsis:            Framework for build-system-like computations
description:         Track data-dependencies of computations and reevaluate them when needed
license:             AllRightsReserved
author:              Alexander Thiemann <mail@agrafix.net>
maintainer:          mail@agrafix.net
copyright:           (c) 2013 by Alexander Thiemann
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.DepFramework
  build-depends:       base ==4.6.*, unordered-containers ==0.2.*, text ==0.11.*, mtl ==2.1.*, aeson ==0.6.*, hashable ==1.2.*, bytestring ==0.10.*, unix ==2.6.*, cryptohash ==0.8.*, filepath ==1.3.*, monad-logger ==0.3.*, persistent ==1.2.*, resourcet ==0.4.*, persistent-mysql ==1.2.*, persistent-template ==1.2.*
